--- a/sustainability.html
+++ b/sustainability.html
@@ -102,7 +102,7 @@
                     <p>Since launching our sustainability program in 2018, we've made significant progress in reducing our environmental impact while continuing to grow our business.</p>
                     <p>Our data-driven approach ensures we measure, track, and improve every aspect of our operations to minimize ecological harm.</p>
                     
-                    <div class="impact-stats">
+                    <!-- <div class="impact-stats">
                         <div class="impact-stat" data-aos="fade-up">
                             <div class="stat-label">
                                 <span>Carbon Emissions</span>
@@ -130,7 +130,7 @@
                                 <div class="progress-fill" style="--progress: 65%;"></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="impact-image" data-aos="fade-left">
                     <img src="./assests/img14.jpeg" alt="Environmental impact">
