--- a/responsibility.html
+++ b/responsibility.html
@@ -82,7 +82,7 @@
         </div>
     </section>
 
-    <!-- Environmental Section -->
+    <!-- Environmental Section
     <section class="environmental">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
@@ -95,7 +95,7 @@
                     <p>As a global logistics provider, we recognize our responsibility to minimize environmental harm. We've implemented comprehensive programs to reduce emissions, conserve resources, and promote circular economy principles.</p>
                     <p>Our Green Logistics Initiative includes fleet modernization, alternative fuel adoption, and route optimization to cut carbon emissions by 40% by 2025.</p>
                     
-                    <!-- <div class="progress-container">
+                    <div class="progress-container">
                         <div class="progress-item" data-aos="fade-up">
                             <div class="progress-label">
                                 <span>Carbon Emission Reduction</span>
@@ -123,14 +123,14 @@
                                 <div class="progress-fill" style="--progress: 90%;"></div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="environmental-image" data-aos="fade-left">
                     <img src="./assests/img11.jpg" alt="Solar panels at our facility">
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Safety Section -->
     <section class="safety">
