--- a/index.html
+++ b/index.html
@@ -39,11 +39,26 @@
                 <li class="nav-item"><a href="terminals.html" class="nav-link">Terminals</a></li>
                 <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
+        </div>
+        <div class="mobile-nav">
+            <a href="index.html" class="nav-logo">
+                <img src="./assests/Logo/Trans-Siberian Shipping LLC.png" alt="Trans-Siberian Shipping Logo" class="logo-img">
+                <span class="logo-text">Trans-Siberian Shipping</span>
+            </a>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
+            <ul class="nav-menu" id="nav-menu">
+                <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="responsibility.html" class="nav-link">Responsibilty</a></li>
+                <li class="nav-item"><a href="sustainability.html" class="nav-link">Sustainability</a></li>
+                <li class="nav-item"><a href="services.html" class="nav-link">Servivces</a></li>
+                <li class="nav-item"><a href="terminals.html" class="nav-link">Terminals</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+            </ul>
         </div>
     </nav>
 
